[package]
name    = "steamy-controller"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Library to interact with the Steam controller."
repository  = "https://github.com/meh/steamy"
keywords    = ["steam", "input", "controller"]

[dependencies]
byteorder = "0.4"
bitflags  = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libusb = "0.2"
