[package]
name    = "steamy-controller"
version = "0.1.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Library to interact with the Steam controller."
repository  = "https://github.com/meh/steamy"
keywords    = ["steam", "input", "controller"]

[dependencies]
byteorder = "0.5"
bitflags  = "0.3"

[target.'cfg(target_os = "linux")'.dependencies.libusb]
version = "0.2"

[target.'cfg(not(target_os = "linux"))'.dependencies.hid]
version  = "0.2"
features = ["build"]
